Spelling mistake and added logo to navbar

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,3 +5,10 @@
 .navbar > ul > a {
   margin: 2rem;
 }
+
+.navbar > img {
+  width: 10%;
+  height: auto;
+  display: flex;
+  justify-content: flex-start;
+}
