--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,14 +1,50 @@
-.navbar > ul {
+.navbar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 1rem;
+
+  width: 100%;
+}
+
+.navbar > ul {
+  display: initial;
+
+  color: var(--primary);
 }
 .navbar > ul > a {
   margin: 2rem;
 }
 
 .navbar > img {
-  width: 10%;
-  height: auto;
+  width: clamp(5rem, 5%, 5.1rem);
   display: flex;
   justify-content: flex-start;
+}
+
+.navbar > div {
+  display: none;
+
+  width: 2rem;
+
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+.navbar > div > div {
+  width: 100%;
+  height: 0.69rem;
+
+  background-color: var(--secondary);
+}
+
+@media only screen and (max-width: 660px) {
+  .navbar > ul {
+    display: none;
+  }
+  .navbar > div {
+    display: flex;
+  }
 }
