Remove style from main app

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@ body {
   font-family: "Raleway", sans-serif;
   background-color: var(--background);
   color: var(--primary);
+  margin: 0;
+}
+
+p {
+  color: var(--text);
 }
 
 a {
